test/types/type_variables/ferguson/notGenericQ-var.chpl
record R { }

{
  var x: R(?);
}
